<resources>
    <string name="app_name">Cadastro De Atleta</string>
    <string name="actAtl">Atleta</string>
    <string name="actJuv">Atleta Juvenil</string>
    <string name="actSenior">Atleta Senior</string>
    <string name="nome">Nome</string>
    <string name="dtNascimento">Data de nascimento</string>
    <string name="bairro">Bairro</string>
    <string name="qtdAnos">Quantidade de anos de pratica</string>
    <string name="problemaCardiaco">Tem problema cardiaco?</string>
    <string name="academia">Academia que compete</string>
    <string name="recorde">Recorde em segundos</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="escolher">Escolha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>