<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_comum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComumFragment">

    <EditText
        android:id="@+id/etAcademia"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/academia"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRecorde"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/recorde"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAcademia" />

    <EditText
        android:id="@+id/etNomeAtl"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etdtNascimentoAtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etdtNascimentoAtl"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="352dp"
        android:ems="10"
        android:hint="@string/dtNascimento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etNomeAtl" />

    <EditText
        android:id="@+id/etBairroAtl"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etdtNascimentoAtl"
        app:layout_constraintTop_toBottomOf="@+id/etdtNascimentoAtl" />

    <Button
        android:id="@+id/btnCadastrarAtl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBairroAtl" />
</androidx.constraintlayout.widget.ConstraintLayout>