<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_senior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeniorFragment">

    <EditText
        android:id="@+id/etProblema"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/problemaCardiaco"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeSen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etProblema" />

    <EditText
        android:id="@+id/etdtNascimentoSen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/dtNascimento"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeSen" />

    <EditText
        android:id="@+id/etBairroSen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etdtNascimentoSen" />

    <Button
        android:id="@+id/btnCadastrarSen"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="69dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBairroSen"
        tools:text="@string/cadastrar" />
</androidx.constraintlayout.widget.ConstraintLayout>